--- a/templates/index.html
+++ b/templates/index.html
@@ -99,21 +99,21 @@
                 <div class="url-div">
                     <label for="url" class="desc">Enter webpage URL: </label>
                     <input type="text" id="url" name="url" class="form-control mr-2" />
-                    <input type="radio" id="dynchoice1" name="dyn" value="dyn"/>
+                    <input type="radio" id="dynchoice1" name="dyn" value="dyn" checked/>
                     <label for="dynchoice1" class="desc">Dynamic page scraping (best for bigger sites)</label>
                     <input type="radio" id="dynchoice2" name="dyn" value="notdyn"/>
                     <label for="dynchoice2" class="desc">Basic page scraping (best for smaller sites)</label>
                     <br /><br />
                     <label for="front" class="desc">Postcard front HTML template file: </label>
-                    <input type="file" id="front" name="front" class="form-control mr-2" />
+                    <input type="file" id="front" name="front" class="form-control mr-2" accept=".html"/>
                     <br />
                     <label for="back" class="desc">Postcard back HTML template file: </label>
-                    <input type="file" id="back" name="back" class="form-control mr-2" />
+                    <input type="file" id="back" name="back" class="form-control mr-2" accept=".html"/>
                     <br /><br />
                     <label class="desc">Please select your preferred postcard size:</p>
                     <input type="radio" id="sizechoice1" name="size" value="4x6" />
                     <label for="sizechoice1" class="desc">4x6</label>
-                    <input type="radio" id="sizechoice2" name="size" value="6x9" />
+                    <input type="radio" id="sizechoice2" name="size" value="6x9" checked/>
                     <label for="sizechoice1" class="desc">6x9</label>
                     <input type="radio" id="sizechoice3" name="size" value="6x11" />
                     <label for="sizechoice1" class="desc">6x11</label>
