(local) worked on demo creatives

--- a/templates/index.html
+++ b/templates/index.html
@@ -91,7 +91,7 @@
             <div class="text-center text-white">
                 <title>AI text summarizers for postcards!</title>
             </div>
-            <h1 class="header">AI text summarizers for postcards!</h1>
+            <h1 class="header">AI text summarizers for postcards (v. 0.5)</h1>
             <p class="desc">
                 Type a sentence, click on the submit button and wait for your prediction.
             </p>
