--- a/templates/index.html
+++ b/templates/index.html
@@ -93,7 +93,7 @@
             </div>
             <h1 class="header">AI text summarizers for postcards (v. 0.5)</h1>
             <p class="desc">
-                Type a sentence, click on the submit button and wait for your prediction.
+                Enter a URL, click on the submit button and wait for your prediction.
             </p>
             <form method="POST" enctype="multipart/form-data" onSubmit="return validate();" class="form">
                 <div class="url-div">
